# MeshSegmentation

./: CMakeLists.txt  README.md
include/: cluster.h  cut.h  draw.h  graph.h  logging.h  utils.h
src/: CMakeLists.txt  main.cpp  test_assimp.cpp
